--- a/html-host/index.html
+++ b/html-host/index.html
@@ -8,7 +8,7 @@
   <script src="http://localhost:3001/remote.js"></script>
   <style>
     button {
-      color: red;
+      color: blue;
     }
   </style>
 <body>
