--- a/html-host/index.html
+++ b/html-host/index.html
@@ -17,6 +17,11 @@
       color: green;
     }
   </style>
+  <style>
+    button {
+      color: green;
+    }
+  </style>
 <body>
   <div>HTML HOST</div>
   <div id="app"></div>
